<resources>
    <string name="app_name">UFit</string>
    <string name="splash_screen_team_name">by SPQS</string>
    <string name="home">Home</string>
    <string name="plan">Plans</string>
    <string name="trainer">Trainer</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="myPlans">My workout plans</string>
    <string name="trainerPlans">Trainer\'s workout plans</string>
    <string name="serie">Sets</string>
    <string name="reps">Reps</string>
    <string name="loads">Loads</string>
    <string name="new_workout_plan">Create new Workout Plan</string>
    <string name="workout_plan_name">Workout plan name</string>
    <string name="workoutplan">Workout Plans</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="image">Image</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birthdate</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Not specified</item>
    </string-array>
    <string name="profile_text_no_information">No information available. Update them from profile settings.</string>
    <string name="profile_settings_change_image">Change profile image</string>
    <string name="profile_settings_edit_password">Edit password</string>
    <string name="profile_settings_edit_email">Edit email</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile_name_surname_placeholder" translatable="false">%s %s</string>
    <string name="atleta">Athlete</string>
    <string name="btnConnectionTrainer">Connect with your trainer</string>
    <string name="userLinked">"Currently linked to a user. In workout section, you can create for him custom workout plans."</string>
    <string name="trainerLinked">"Currently linked to a Trainer. If your trainer creates workout for you, you'll find it in workout section."</string>
    <string name="connectionHintForTrainer">Connect to a user to help him in workout, suppling help in workoutplan creation.</string>
    <string name="connectionHintForUser">Connect to a trainer to get helped in better workoutplan creation, most suitable for you.</string>
    <string name="linkedUserInfo">Linked user info:</string>
    <string name="noPaired">No devices paired</string>
    <string name="noFound">No devices found, be sure to active bluetooth visibility</string>
    <string name="sameRole">You can only connect accounts with different role</string>
    <string name="dispositiviBT">Bluetooth devices</string>
    <string name="senzaBluetooth">Bluetooth not available in this device</string>
    <string name="bluetoothDisabled">Bluetooth not enabled</string>
    <string name="disconnection">Disconnecting…</string>
    <string name="lostConnection">Connection lost</string>
    <string name="disconnect">Disconnect</string>
    <string name="connetti">Connect</string>
    <string name="connessoCon">Connected with: </string>
    <string name="connecting">Status: Connecting…</string>
    <string name="notConnected">Status: Not connected</string>
    <string name="associati">Paired devices</string>
    <string name="trovati">Discovered devices</string>
    <string name="myGeneralStats">General</string>
    <string name="myBodyStats">Measurement</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="fatLabel">Fat</string>
    <string name="bonesLabel">Bones</string>
    <string name="waterLabel">Water</string>
    <string name="musclesLabel">Muscles</string>
    <string name="dateLabel">Date</string>
    <string name="imcLabel" translatable="false">BMI</string>
    <string name="ffmiLabel" translatable="false">FFMI</string>
    <string name="measure">Measure</string>
    <string name="mesureHint">Insert load here</string>
    <string name="sizeTableLabel">Misurazioni acquisite</string>
    <string name="formulaBMI">Weight[kg] / (Height[m] x Height[m])</string>
    <string name="ffmiFormula">weight [kg] * (1 - (body fat [%]/ 100)) / (height [m])²</string>
    <string name="severe_low_weight">Severe underweight</string>
    <string name="low_weight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obesity_first_level">Obesity First Level</string>
    <string name="obesity_second_level">Obesity Second Level</string>
    <string name="obesity_third_level">Obesity Third Level</string>
    <string name="ffmi_below_average">Below Average</string>
    <string name="ffmi_average">Average</string>
    <string name="ffmi_above_average">Above Average</string>
    <string name="ffmi_excellent">Excellent</string>
    <string name="ffmi_superior">Superior</string>
    <string name="ffmi_sospicius">Sospicius not natural</string>
    <string name="ffmi_not_natural">Obteined with steroids</string>
    <string name="click_to_insert_values">"Click to insert values and calculate BMI and FFMI",</string>
    <string name="empty" translatable="false"> - </string>
    <string name="x" translatable="false">x</string>
    <string name="kg" translatable="false">kg</string>
    <string name="cm" translatable="false">cm</string>
    <string name="percent" translatable="false">%</string>
    <string name="armMeasure">Arm</string>
    <string name="chestMeasure">Chest</string>
    <string name="waistMeasure">Waist</string>
    <string name="tightMeasure">Tight</string>
    <string name="calveMeasure">Calve</string>
    <string name="RM">1 RM</string>
    <string name="reps_3_2">3/2 reps</string>
    <string name="reps_5_4">5/4 reps</string>
    <string name="reps_7_6">7/6 reps</string>
    <string name="reps_9_8">9/8 reps</string>
    <string name="reps_11_10">11/10 reps</string>
    <string name="reps_13_12">13/12 reps</string>
    <string name="reps_15_14">15/14 reps</string>
    <string name="reps_17_16">17/16 reps</string>
    <string name="reps_18_19">19/18 reps</string>
    <string name="reps_20">20 reps</string>
    <string name="selectReps">Select reps</string>
    <string name="insertWeight">Insert the weight of the exercise</string>
    <string name="calculate">Calculate</string>
    <string name="profile_settings_edit_role">Switch to Trainer account</string>
    <string name="profile_settings_delete_profile">Delete profile</string>
    <string name="profile_settings_edit_personal_information">Edit personal information</string>
    <string name="edit_email_caution_msg">Caution: the email you enter will be your only way to access your account!</string>
    <string name="date" translatable="false">%d/%d/%d</string>
    <string name="profile_settings_name_empty">Name can\'t be empty</string>
    <string name="profile_settings_surname_empty">Surname can\'t be empty</string>
    <string name="edit_password_caution_msg">Caution: the password you enter will be the only way to access your account!</string>
    <string name="profile_settings_delete_profile_msg">Are you sure you want to delete your profile? This action can\'t be reverted!</string>
    <string name="profile_setting_change_credentials">This operation requires Login</string>
    <string name="delete">Delete profile</string>
    <string name="cancel">Cancel</string>
    <string name="website">"Website"</string>
    <string name="insertValue">Insert value</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="email_not_valid">"This is not an email"</string>
    <string name="wrong_credentials">"Email or password incorrect."</string>
    <string name="choose_activity_text">Oh no! Looks like no account is logged in yet! ☹</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="password_not_valid">"Needs at least 6 characters. Required: uppercase, lowercase, numbers and special chars"</string>
    <string name="passwords_not_equal">"Insert the same password pls"</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="send_email">Send</string>
    <string name="password_reset_helper_text">Enter the email address of the account for which you want to reset your password</string>
    <string name="password_reset_email_sent">We sent you an email to reset your password.</string>
    <string name="insertTitleAdvice">Insert a title for your advice</string>
    <string name="insertDescriptionAdvice">Insert a description for your advice</string>
    <string name="search_here">Search here</string>
    <string name="muscles_involved">Muscles Involved</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="placeholder_item_list"> ● item1\n ● item2\n ● item3\n ● item4</string>
    <string name="imgExercise">Exercise image</string>
    <string name="img" translatable="false">img</string>
    <string name="assemblies_report_search_reports">Search reports</string>
    <string name="assemblies_report_create_report">Create report</string>
    <string name="assemblies_report_gym_address">Gym address</string>
    <string name="assemblies_report_desc">Insert your gym address and we will search for assemblies recently reported by other users.</string>
    <string name="assemblies_report_assembly_perception">Assembly perception</string>
    <string name="assemblies_report_send_report">Send report</string>
    <string name="assemblies_report_create_report_msg">Thank you for sending your report!</string>
    <string name="assemblies_report">Assemblies report</string>
    <string name="assemblies_report_address_empty">Gym address can\'t be empty</string>
    <string name="assemblies_report_address_not_valid">The gym address you entered isn\'t valid</string>
    <string name="assemblies_report_perception_empty">Assembly perception can\'t be empty</string>
    <string name="assemblies_report_connection_error">No connection available. Try later.</string>
    <string name="assemblies_report_no_result">No reports found for the entered location.</string>
    <string name="assemblies_report_search_result">Users reported that the entered location is: %s</string>
    <string name="assemblies_report_gps_access_reasons">Each report generated by users need the location witch it refers to. Those information are private and never visible by other users. If you wish to generate an assembly report, your consent to access location information is needed.</string>
    <string name="dialog_positive_button">Accept</string>
    <string name="dialog_negative_button">No thanks</string>
    <string name="assembly_perception_not_crowded">Not crowded</string>
    <string name="assembly_perception_slightly_crowded">Slightly crowded</string>
    <string name="assembly_perception_crowded">Crowded</string>
    <string name="assembly_perception_really_crowded">Really crowded</string>
    <string name="noItemFound">No results</string>
    <string name="noWorkoutFound">No workout plans</string>
</resources>