<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userprofile.settings.ProfileSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            app:cardCornerRadius="90dp">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_profile_placeholder" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnEditProfileImage"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_settings_change_image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/standard_margin"
            android:background="@color/colorOnSurface" />


        <Button
            android:id="@+id/btnEditPersonalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings_edit_personal_information" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/standard_margin"
            android:background="@color/colorOnSurface" />

        <Button
            android:id="@+id/btnEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings_edit_email" />

        <Button
            android:id="@+id/btnEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings_edit_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/standard_margin"
            android:background="@color/colorOnSurface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atleta"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/swEditRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/small_standard_margin"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer"

                android:textAllCaps="true"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/standard_margin"
            android:background="@color/colorOnSurface" />

        <Button
            android:id="@+id/btnDeleteProfile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings_delete_profile"
            android:textColor="@color/colorRed" />


    </LinearLayout>
</ScrollView>