<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etWeightUsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/insertWeight"
        android:autofillHints="0" />

    <Button
        android:id="@+id/btnRepsDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etWeightUsed"
        android:text="@string/selectReps"
        />

    <Button
        android:id="@+id/btnConfirmCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etWeightUsed"
        android:layout_alignEnd="@+id/btnRepsDialog"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/calculate" />

    <FrameLayout
        android:id="@+id/fragment_container_weight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnConfirmCalculate"

        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />
    </FrameLayout>
</RelativeLayout>