<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlWorkoutPlans"
        android:layout_width="0dp"
        android:layout_height="@dimen/plans_tab_items_height"
        android:elevation="@dimen/toolbar_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorSecondary"
        app:tabTextColor="@color/colorWhite">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myPlans" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trainerPlans" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_add_white"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/CustomMaterialFAB"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNoFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noWorkoutFound"
        android:layout_marginTop="@dimen/standard_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorPrimaryLight"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlWorkoutPlans" />
    <FrameLayout
        android:id="@+id/fragment_container_plans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/plans_tab_items_height">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWorkoutPlans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:background="@color/colorGray5" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>